Define logger as static instances