@@ -35,15 +35,20 @@ import com.izforge.izpack.panels.process.AbstractUIProcessHandler;
  * @author Patrick Reinhart
  */
 public class DemoProcess {
+  private static final Logger LOG = Logger.getLogger(DemoProcess.class.getName());
+
+  public DemoProcess() {
+    LOG.info("DemoProcess()");
+  }
 
   public boolean run(AbstractUIProcessHandler handler, String[] arguments) {
-    Logger log = Logger.getLogger(getClass().getName());
     List<String> argumentList = Arrays.asList(arguments);
-    log.warning(String.format("DemoProcess.run(%s, %s) with 30 second delay", handler.getClass().getName(), argumentList));
+    LOG.warning(() -> "DemoProcess.run(%s, %s) with 30 second delay".formatted(handler.getClass().getName(), argumentList));
     try {
       TimeUnit.SECONDS.sleep(1);
     } catch (InterruptedException e) {
-      log.log(Level.SEVERE, "Unexpected interruption", e);
+      Thread.currentThread().interrupt();
+      LOG.log(Level.SEVERE, "Unexpected interruption", e);
     }
     return !argumentList.contains("fail");
   }
